src/core/Claroline/CoreBundle/Tests/Stub/plugin/Invalid/UnloadableBundleClass2/InvalidUnloadableBundleClass2.php
<?php

namespace UnexpectedNamespace\UnloadableBundleClass2;

class InvalidUnloadableBundleClass2
{
    /*
     * Unloadable because the class vendor namespace doesn't
     * match the bundle vendor directory
     */
}